--- a/ui/package.json
+++ b/ui/package.json
@@ -8,8 +8,10 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@auth0/auth0-react": "^1.9.0",
     "bulma": "^0.9.3",
     "react": "^16.13.1",
+    "react-bulma-components": "^4.1.0",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
