--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,9 @@
   "license": "MIT",
   "dependencies": {
     "@auth0/auth0-react": "^1.9.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.1",
     "bulma": "^0.9.3",
     "react": "^16.13.1",
     "react-bulma-components": "^4.1.0",
