--- a/ui/package.json
+++ b/ui/package.json
@@ -13,17 +13,11 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.3",
-    "bulma": "^0.9.3",
     "react": "^16.13.1",
-    "react-bulma-components": "^4.1.0",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "@parcel/transformer-image": "2.0.0-beta.2",
-    "@parcel/transformer-sass": "2.0.0-beta.2",
-    "babel-preset-nano-react-app": "^0.1.0",
-    "parcel": "^2.0.0-alpha.3.2",
-    "sass": "^1.35.2"
+    "parcel": "^2.0.0-alpha.3.2"
   },
   "babel": {
     "presets": [
