--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ui",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "",
   "scripts": {
     "start": "parcel index.html",
@@ -8,22 +8,18 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@auth0/auth0-react": "^1.9.0",
-    "bulma": "^0.9.3",
-    "react": "^16.13.1",
-    "react-bulma-components": "^4.1.0",
-    "react-dom": "^16.13.1"
+    "@auth0/auth0-react": "^1.10.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.6.2",
+    "@mui/x-data-grid": "^5.9.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
-    "@parcel/transformer-image": "2.0.0-beta.2",
-    "@parcel/transformer-sass": "2.0.0-beta.2",
-    "babel-preset-nano-react-app": "^0.1.0",
-    "parcel": "^2.0.0-alpha.3.2",
-    "sass": "^1.35.2"
-  },
-  "babel": {
-    "presets": [
-      "nano-react-app"
-    ]
+    "parcel": "^2.5.0"
   }
 }
