--- a/ui/package.json
+++ b/ui/package.json
@@ -8,6 +8,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@auth0/auth0-react": "^1.10.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
@@ -19,6 +20,7 @@
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
+    "buffer": "^6.0.3",
     "parcel": "^2.5.0"
   }
 }
