--- a/ui/package.json
+++ b/ui/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "buffer": "^6.0.3",
-    "parcel": "^2.5.0"
+    "parcel": "^2.5.0",
+    "process": "^0.11.10"
   }
 }
