--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,7 @@
     "@mui/x-data-grid": "^5.9.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-markdown": "^8.0.3",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0"
   },
